--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,10 @@ input {
   height: 19px;
   font-size: 16px;
   margin: 1px;
-  border-radius: 15px;
 }
 
-.search-button {
+.search-button,
+.gallery-button {
   border-radius: 15px;
   color: #fff;
   background-color: rgb(255, 62, 62);
@@ -34,7 +34,8 @@ input {
   margin: 3px;
 }
 
-.search-button:hover {
+.search-button:hover,
+.gallery-button:hover {
   background-color: rgb(255, 0, 0);
 }
 
